Fix text wrapping of body links

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -2,3 +2,8 @@
 thead { 
     display: none;    
 }
+
+/* Wrap linked text normally. */
+.main-content a {
+    white-space: normal;
+}
